fix overflow y

--- a/Homepage Tugas/style/style.css
+++ b/Homepage Tugas/style/style.css
@@ -9,6 +9,7 @@ body {
   background: #29a19c;
   color: white;
   transition: 0.5s;
+  overflow-x: hidden;
 }
 .logo {
   cursor: pointer;
